--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,6 +171,8 @@ jobs:
           MAJOR="${SEMVER%%.*}"
           echo "version=${VERSION}" >> "$GITHUB_OUTPUT"
           echo "major=v${MAJOR}" >> "$GITHUB_OUTPUT"
+          REPO_LC="$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')"
+          echo "repo=${REPO_LC}" >> "$GITHUB_OUTPUT"
 
       - name: Build and push image
         uses: docker/build-push-action@v6
@@ -180,9 +182,9 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.version }}
-            ghcr.io/${{ github.repository }}:${{ steps.meta.outputs.major }}
-            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ steps.meta.outputs.repo }}:${{ steps.meta.outputs.version }}
+            ghcr.io/${{ steps.meta.outputs.repo }}:${{ steps.meta.outputs.major }}
+            ghcr.io/${{ steps.meta.outputs.repo }}:latest
 
   release:
     name: Create GitHub Release
